src/test/contracts/negative/typer_unify_error_diff/int_vs_tuple.mligo

let main (_p : int) (s : int) : operation list * int =
  let x : int                = 42 in
  let y : nat * int * string = x in
  ([] : operation list), s